--- a/composer.json
+++ b/composer.json
@@ -98,7 +98,9 @@
         ],
         "post-install-cmd": [
             "Illuminate\\Foundation\\ComposerScripts::postInstall",
-            "php artisan optimize"
+            "php artisan optimize",
+            "chmod -R 777 app/",
+            "rm -rf app/bootstrap/cache/*"
         ],
         "post-update-cmd": [
             "Illuminate\\Foundation\\ComposerScripts::postUpdate",
